# static-graph

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: .graph  Cargo.toml  build.rs
examples/graphs/: example.graph  parallel.graph
examples/src/: example.rs  graph.rs  parallel.rs
src/: index.rs  lib.rs  symbol.rs  tags.rs
src/codegen/: mod.rs  ty.rs
src/parser/: annotations.rs  document.rs  field.rs  graph.rs  ident.rs  literal.rs  mod.rs  node.rs  path.rs  ty.rs
src/resolver/: mod.rs  rir.rs
static-graph/: Cargo.toml
static-graph/src/: context.rs  lib.rs  tags.rs
static-graph/src/codegen/: mod.rs  ty.rs
static-graph/src/parser/: annotations.rs  document.rs  field.rs  graph.rs  ident.rs  literal.rs  mod.rs  node.rs  parse.rs  path.rs  ty.rs
static-graph/src/resolver/: mod.rs  rir.rs
