[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "graph"
path = "src/graph.rs"

[dependencies]
async-trait = "0.1"
static-graph = { path = "../static-graph" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
static-graph = { path = "../static-graph" }