[package]
name = "static-graph"
version = "0.1.0"
edition = "2021"
authors = ["Volo Team <volo@cloudwego.io>"]
description = "Generate static parallel computation graph from DSL at compile time"
keywords = ["graph", "codegen"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/volo-rs/static-graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
faststr = "0.1"
fxhash = "0.2"
heck = "0.4"
nom = "7"
proc-macro2 = "1"
quote = "1"
syn = "1"
tokio = { version = "1", features = ["full"] }
